Misc changes to the drag/drop functionality, added a few TODO stubs, added a css class for making things glow (might be useful).

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -40,6 +40,7 @@
                         <div id="Controls_Executor_Arg0" class="executor-input-box boxed"></div>
                         <div id="Controls_Executor_Arg1" class="executor-input-box boxed"></div>
                         <div id="Controls_Executor_Rule" class="executor-input-box boxed rule-container"></div>
+                        <button id="Controls_Executor_Evaluate">Evaluate</button>
                     </div>
                     <div id="Controls_Rules">
                         <ul id="Controls_Rules_List"></ul>
