Input boxes now glow when the appropriate droppable is hovered over them. Fixed the background on the main page. Added the rule calculation, though you cant do anything with the result.

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -36,11 +36,11 @@
                 </canvas>
                 <div id="GameControls">
                     <div id="Controls_Executor">
-                        <div id="Controls_Executor_Result" class="executor-input-box boxed"></div>
-                        <div id="Controls_Executor_Arg0" class="executor-input-box boxed"></div>
-                        <div id="Controls_Executor_Arg1" class="executor-input-box boxed"></div>
-                        <div id="Controls_Executor_Rule" class="executor-input-box boxed rule-container"></div>
-                        <button id="Controls_Executor_Evaluate">Evaluate</button>
+                        <div id="Controls_Executor_Result" class="executor-box boxed"></div>
+                        <div id="Controls_Executor_Arg0" class="executor-box boxed"></div>
+                        <div id="Controls_Executor_Arg1" class="executor-box boxed"></div>
+                        <div id="Controls_Executor_Rule" class="executor-box boxed"></div>
+                        <button type="button" id="Controls_Executor_Evaluate">Evaluate</button>
                     </div>
                     <div id="Controls_Rules">
                         <ul id="Controls_Rules_List"></ul>
