Added buttons for resetting data.  Didnt  bother to style them or put them anywhere special.  Now handle the result with a one time click event.  Add it to the table if it exists and do nothing if it doesnt, but in both cases clear results and input.  Up next need to finish documentation, been slacking a bit.  After that need to address the offscreen fact/rule issue that is approaching.

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -41,6 +41,8 @@
                         <div id="Controls_Executor_Arg1" class="executor-box boxed"></div>
                         <div id="Controls_Executor_Rule" class="executor-box boxed"></div>
                         <button type="button" id="Controls_Executor_Evaluate">Evaluate</button>
+                        <button type="button" id="Controls_Executor_ClearResults">Clear Results</button>
+                        <button type="button" id="Controls_Executor_ClearInput">Clear Input</button>
                     </div>
                     <div id="Controls_Rules">
                         <ul id="Controls_Rules_List"></ul>
