Fixed the styling for modals and added a function to display the level cleared modal.

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -5,6 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link rel="stylesheet" type="text/css" href="css/main.css" />
         <link rel="stylesheet" type="text/css" href="css/positions.css" />
+	<link rel="stylesheet" type="text/css" href="css/blitzer/jquery-ui-1.10.4.custom.min.css" />
         <script src="js/libs/jquery-1.9.0/jquery.min.js"></script>
         <script src="js/libs/jqueryui-1.10.0/jquery-ui.min.js"></script>
         <script src="js/util.js"></script>
@@ -54,11 +55,11 @@
                 </div>
             </div>
 	    <div id="Dialogs" style="display: none;">
-		<div id="Dialogs_LevelCleared" title="Stage cleared">
-		    <p>Congrats, you've shown <span id="Dialogs_LevelCleared_Conclusion"></span> to be true!</p>
+		<div id="Dialogs_LevelCleared" title="Stage Cleared!">
+		    <p>Congrats, you've shown <b><span id="Dialogs_LevelCleared_Conclusion"></span></b> to be true!</p>
 		    <br />
-		    <p>A pro can do this establishing only <span id="Dialogs_LevelCleared_Par"></span> 
-		    facts.  You solved it by establishing <span id="Dialogs_LevelCleared_Actual"></span>.  
+		    <p>A pro can do this establishing only <b><span id="Dialogs_LevelCleared_Par"></span> </b>
+		    facts.  You solved it by establishing <b><span id="Dialogs_LevelCleared_Actual"></span></b>.  
 		    <span id="Dialogs_LevelCleared_Congrats" style="display: none;">
 			Looks like you know what you're doing after all!
 		    </span>
