Display the conclusion

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -37,6 +37,9 @@
                     Something went wrong when rendering the canvas.
                 </canvas>
                 <div id="GameControls">
+		    <div id="Controls_Display">
+			<p>Prove:  <b><span id="Controls_Display_Conclusion"></span></b></p>
+		    </div>
                     <div id="Controls_Executor">
                         <div id="Controls_Executor_Result" class="executor-box boxed"></div>
                         <div id="Controls_Executor_Arg0" class="executor-box boxed"></div>
