Beginning of Tutorial implementation and some minor css changes for Rules and Facts

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -14,7 +14,9 @@
         <script src="js/classes/Fact.js"></script>
         <script src="js/classes/Rule.js"></script>
         <script src="js/classes/Level.js"></script>
+	<script src="js/classes/Tutorial.js"></script>
 	<script src="js/dialogs/LevelClearedDialog.js"></script>
+	<script src="js/dialogs/TutorialDialog.js"></script>
         <script src="js/init.js"></script>
         <script src="js/control.js"></script>
         <script src="js/events.js"></script>
@@ -71,6 +73,9 @@
 		    </span></p>
 		    <br />
 		    <p>Now you can either move on to the next level or replay this one to get a better score.</p>
+		</div>
+		<div id="Dialogs_Tutorial" title="Tutorial">
+		    
 		</div>
 	    </div>
         </div>
