Added POE, more tutorials, second level, and change to Fact.toString that makes negations easier to look at.

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -61,10 +61,12 @@
             </div>
 	    <div id="Dialogs" style="display: none;">
 		<div id="Dialogs_LevelCleared" title="Stage Cleared!">
-		    <p>Congrats, you've shown <b><span id="Dialogs_LevelCleared_Conclusion"></span></b> to be true!</p>
+		    <p>Congratulations, you've shown <b><span id="Dialogs_LevelCleared_Conclusion"></span></b> to be true!</p>
 		    <br />
 		    <p>A pro can do this establishing only <b><span id="Dialogs_LevelCleared_Par"></span> </b>
-		    facts.  You solved it by establishing <b><span id="Dialogs_LevelCleared_Actual"></span></b>.  
+		    fact(s).  You had a total of <b><span id="Dialogs_LevelCleared_Actual"></span></b>, minus the 
+		    <b><span id="Dialogs_LevelCleared_Starting"></span></b> you started with means you established 
+		    <b><span id="Dialogs_LevelCleared_Established"></span></b>.  
 		    <span id="Dialogs_LevelCleared_Congrats" style="display: none;">
 			Looks like you know what you're doing after all!
 		    </span>
