Added some HTML for the tooltip menu

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -57,6 +57,9 @@
                     <div id="Controls_Facts">
                         <table id="Controls_Facts_Table"></table>
                     </div>
+		    <div id="Controls_Tooltip" style="display: none;">
+			
+		    </div>
                 </div>
             </div>
 	    <div id="Dialogs" style="display: none;">
