Added some transitions to the glowing classes, create a FactCreationDialog stub, added check for Add rule so ellipse is displayed and click event is bound (no logic yet for the click event), did a bit more work with the AddTable.

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -60,6 +60,26 @@
 		    <div id="Controls_Tooltip" style="display: none;">
 			
 		    </div>
+		    <div id="Controls_AddTable" style="display: none;">
+			<table>
+			    <tr><th colspan="2">Recent Facts</th></tr>
+			    <tr><td>AT1</td><td id="Controls_AddTable_Fact1">
+				    <div class="add-rule">+</div>
+				</td></tr>
+			    <tr><td>AT2</td><td id="Controls_AddTable_Fact2">
+				    <div class="add-rule">+</div>
+				</td></tr>
+			    <tr><td>AT3</td><td id="Controls_AddTable_Fact3">
+				    <div class="add-rule">+</div>
+				</td></tr>
+			    <tr><td>AT4</td><td id="Controls_AddTable_Fact4">
+				    <div class="add-rule">+</div>
+				</td></tr>
+			    <tr><td>AT5</td><td id="Controls_AddTable_Fact5">
+				    <div class="add-rule">+</div>
+				</td></tr>
+			</table>
+		    </div>
                 </div>
             </div>
 	    <div id="Dialogs" style="display: none;">
