More implementation for Fact creation - You can now enter letters. Thats about it. Still need to do auto and manual grouping, operator placement, and group selection.

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -141,7 +141,11 @@
                         <h2>Instructions</h2>
                         <p>Enter the Fact you would like to create in the Creation Panel. Use your keyboard to enter simple statements and drag operators from the toolbar</p>
                         <h2>Creation Panel</h2>
-                        <div></div>
+                        <div id="Dialogs_FactCreation_Creation">
+                            <input type="text" maxlength="1" id="Dialogs_FactCreation_Creation_Input" />
+                            <span class="creation-element selected">?</span>
+                        </div>
+                        
                     </div>
                     <div>
                         <h4>Operators and tools</h4>
