Added tools, though they dont do anything yet

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -142,7 +142,6 @@
                         <p>Enter the Fact you would like to create in the Creation Panel. Use your keyboard to enter simple statements and drag operators from the toolbar</p>
                         <h2>Creation Panel</h2>
                         <div id="Dialogs_FactCreation_Creation">
-                            <input type="text" maxlength="1" id="Dialogs_FactCreation_Creation_Input" />
                             <span class="creation-element selected">?</span>
                         </div>
                         
@@ -150,11 +149,14 @@
                     <div>
                         <h4>Operators and tools</h4>
                         <ul id="Dialogs_FactCreation_OpList">
-                            <li><div class="operator">&and;</div></li>
-                            <li><div class="operator">&or;</div></li>
-                            <li><div class="operator">&rarr;</div></li>
-                            <li><div class="operator">&harr;</div></li>
-                            <li><div class="operator">&oplus;</div></li>
+                            <li><div class="operator"><span>&and;</span></div></li>
+                            <li><div class="operator"><span>&or;</span></div></li>
+                            <li><div class="operator"><span>&rarr;</span></div></li>
+                            <li><div class="operator"><span>&harr;</span></div></li>
+                            <li><div class="operator"><span>&oplus;</span></div></li>
+			    <li><div class="tool"><span>(&nbsp;)</span></div></li>
+			    <li><div class="tool"><span>&tilde;</span></div></li>
+			    <li><div class="tool"><span>Empty</span></div></li>
                         </ul>
                     </div>
                 </div>
