Tools are draggable but dont function the same when placed on a creation-operator

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -139,21 +139,21 @@
                 <div id="Dialogs_FactCreation" title="Fact Editor">
                     <div>
                         <h2>Instructions</h2>
-                        <p>Enter the Fact you would like to create in the Creation Panel. Use your keyboard to enter simple statements and drag operators from the toolbar</p>
+                        <p>Use your keyboard to enter <span class="red">simple statements</span>. Then connect those statements by dragging <span class="green">Operators</span> to the <span class="green">green</span> spots inbetween. You can <span class="gray">group</span> any two statements by using the <span class="gray">group tool</span> on the joining <span class="green">operator</span>. Use the <span class="gray">negation tool</span> to negate any <span class="red">simple</span> or complex statement.</p>
                         <h2>Creation Panel</h2>
                         <div id="Dialogs_FactCreation_Creation">
-                            <span class="creation-element selected">?</span>
+                            <span class="creation-element negatable selected">?</span>
                         </div>
                         
                     </div>
                     <div>
                         <h4>Operators and tools</h4>
                         <ul id="Dialogs_FactCreation_OpList">
-                            <li><div class="operator"><span>&and;</span></div></li>
-                            <li><div class="operator"><span>&or;</span></div></li>
-                            <li><div class="operator"><span>&rarr;</span></div></li>
-                            <li><div class="operator"><span>&harr;</span></div></li>
-                            <li><div class="operator"><span>&oplus;</span></div></li>
+                            <li><div data="operator" class="operator"><span data="operator">&and;</span></div></li>
+                            <li><div data="operator" class="operator"><span data="operator">&or;</span></div></li>
+                            <li><div data="operator" class="operator"><span data="operator">&rarr;</span></div></li>
+                            <li><div data="operator" class="operator"><span data="operator">&harr;</span></div></li>
+                            <li><div data="operator" class="operator"><span data="operator">&oplus;</span></div></li>
 			    <li><div class="tool"><span>(&nbsp;)</span></div></li>
 			    <li><div class="tool"><span>&tilde;</span></div></li>
 			    <li><div class="tool"><span>Empty</span></div></li>
