Added ability to make groups.  Next is clearing, but something tells me that will end up being fucking stupid.  Actually fuck it, instead of the ability to remove little things, how about just this big ass clear button.

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -154,9 +154,9 @@
                             <li><div data="operator" class="operator"><span data="operator">&rarr;</span></div></li>
                             <li><div data="operator" class="operator"><span data="operator">&harr;</span></div></li>
                             <li><div data="operator" class="operator"><span data="operator">&oplus;</span></div></li>
-			    <li><div class="tool"><span>(&nbsp;)</span></div></li>
-			    <li><div class="tool"><span>&tilde;</span></div></li>
-			    <li><div class="tool"><span>Empty</span></div></li>
+			    <li><div data="group" class="tool"><span data="group">(&nbsp;)</span></div></li>
+			    <li><div data="negate" class="tool"><span data="negate">&tilde;</span></div></li>
+			    <li><div data="empty" class="tool"><span data="empty">Empty</span></div></li>
                         </ul>
                     </div>
                 </div>
