More restrictions on grouping, use the space the bar to add additional facts and operators. Next: negation, get fact from dom, and possible validation

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -156,7 +156,7 @@
                             <li><div data="operator" class="operator"><span data="operator">&oplus;</span></div></li>
 			    <li><div data="group" class="tool"><span data="group">(&nbsp;)</span></div></li>
 			    <li><div data="negate" class="tool"><span data="negate">&tilde;</span></div></li>
-			    <li><div data="empty" class="tool"><span data="empty">Empty</span></div></li>
+			    <li><div data="empty" id="Dialogs_FactCreation_OpList_Clear"><span data="empty">Clear</span></div></li>
                         </ul>
                     </div>
                 </div>
