--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -142,7 +142,6 @@
                         <p>Use your keyboard to enter <span class="red">simple statements</span>. Then connect those statements by dragging <span class="green">Operators</span> to the <span class="green">green</span> spots inbetween. You can <span class="gray">group</span> any two statements by using the <span class="gray">group tool</span> on the joining <span class="green">operator</span>. Use the <span class="gray">negation tool</span> to negate any <span class="red">simple</span> or complex statement.</p>
                         <h2>Creation Panel</h2>
                         <div id="Dialogs_FactCreation_Creation">
-                            <span class="creation-element negatable selected">?</span>
                         </div>
                         
                     </div>
@@ -155,8 +154,8 @@
                             <li><div data="operator" class="operator"><span data="operator">&harr;</span></div></li>
                             <li><div data="operator" class="operator"><span data="operator">&oplus;</span></div></li>
 			    <li><div data="group" class="tool"><span data="group">(&nbsp;)</span></div></li>
-			    <li><div data="negate" class="tool"><span data="negate">&tilde;</span></div></li>
-			    <li><div data="empty" id="Dialogs_FactCreation_OpList_Clear"><span data="empty">Clear</span></div></li>
+			    <li><div id="Dialogs_FactCreation_OpList_Negate"><span>&tilde;</span></div></li>
+			    <li><div id="Dialogs_FactCreation_OpList_Clear"><span>Clear</span></div></li>
                         </ul>
                     </div>
                 </div>
