Full fact creation implementation. Now just need to get AddTable working

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -139,8 +139,14 @@
                 <div id="Dialogs_FactCreation" title="Fact Editor">
                     <div>
                         <h2>Instructions</h2>
-                        <p>Use your keyboard to enter <span class="red">simple statements</span>. Then connect those statements by dragging <span class="green">Operators</span> to the <span class="green">green</span> spots inbetween. You can <span class="gray">group</span> any two statements by using the <span class="gray">group tool</span> on the joining <span class="green">operator</span>. Use the <span class="gray">negation tool</span> to negate any <span class="red">simple</span> or complex statement.</p>
-                        <h2>Creation Panel</h2>
+                        <!--<p>Use your keyboard to enter <span class="red">simple statements</span>. Then connect those statements by dragging <span class="green">Operators</span> to the <span class="green">green</span> spots inbetween. You can <span class="gray">group</span> any two statements by using the <span class="gray">group tool</span> on the joining <span class="green">operator</span>. Use the <span class="gray">negation tool</span> to negate any <span class="red">simple</span> or complex statement.</p>
+                        -->
+			<ul>
+			    <li>Use your keyboard to enter <span class="red">simple statements</span></li>
+			    <li>Press the Space bar add an additional <span class="green">operator</span> and <span class="red">simple statements</span></li>
+			    
+			</ul>
+			<h2>Creation Panel</h2>
                         <div id="Dialogs_FactCreation_Creation">
                         </div>
                         
