Small changes to instructions for Fact Creator

--- a/ProoferLogicEngine/public_html/proofer.html
+++ b/ProoferLogicEngine/public_html/proofer.html
@@ -143,8 +143,8 @@
                         -->
 			<ul>
 			    <li>Use your keyboard to enter <span class="red">simple statements</span></li>
-			    <li>Press the Space bar add an additional <span class="green">operator</span> and <span class="red">simple statements</span></li>
-			    
+			    <li>Press the Space bar add an additional <span class="green">operator</span> and <span class="red">simple statement</span> spot.</li>
+			    <li></li>
 			</ul>
 			<h2>Creation Panel</h2>
                         <div id="Dialogs_FactCreation_Creation">
